# hips

./: .gitignore  .rtd-environment.yml  .travis.yml  CHANGES.rst  LONG_DESCRIPTION.rst  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  environment.yml  image_ipix.npy  setup.cfg  setup.py  tile_image.npy
docs/: about.rst  api.rst  conf.py  develop.rst  drawing_algo.rst  getting_started.rst  hipsgen.py  hipsgen.rst  index.rst  installation.rst  plot_fits.py  plot_fits_astropy.py  plot_jpg.py  references.txt
docs/hips/: index.rst
docs/joss_paper/: Makefile  paper.bib  paper.md  plot_jpg.py
hips/: __init__.py  _astropy_init.py  conftest.py
hips/draw/: __init__.py  healpix.py  hipsgen.py  paint.py  simple.py  ui.py
hips/draw/tests/: test_healpix.py  test_hipsgen.py  test_paint.py  test_simple.py  test_ui.py
hips/tiles/: __init__.py  allsky.py  cache.py  description.py  fetch.py  hips.py  hipsdescription.py  io.py  survey.py  surveys.py  tile.py  tile_meta.py  tilefilecache.py
hips/tiles/tests/: setup_package.py  test_allsky.py  test_cache.py  test_description.py  test_fetch.py  test_hips.py  test_hipsdescription.py  test_io.py  test_survey.py  test_surveys.py  test_tile.py
hips/tiles/tests/data/: Npix24185.fits  Npix30889.fits  properties.txt  surveys.txt
hips/utils/: __init__.py  healpix.py  testing.py  tile.py  wcs.py
hips/utils/tests/: test_healpix.py  test_wcs.py
licenses/: LICENSE.rst
notes/: API-proposal.md  announce-0.1.txt
