[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
doctest_norecursedirs = docs/*.py

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = hips
description = Python astronomy package for HiPS
author = HiPS developers
author_email = astropy-dev@googlegroups.com
license = BSD 3-Clause
url = https://github.com/hipspy/hips
edit_on_github = False
github_project = hipspy/hips
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.2

[entry_points]

# astropy-package-template-example = packagename.example_mod:main

